build_log.txt
Type-safe project accessors is an incubating feature.

> Task :composeApp:buildRustWasm FAILED
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
   Compiling physics_core v0.1.0 (/Users/kamran/PhysicsFX/physics_core)
error[E0425]: cannot find value `adapter_info` in this scope
    --> src/lib.rs:2282:9
     |
2282 |         adapter_info,
     |         ^^^^^^^^^^^^ not found in this scope

warning: unused import: `bevy_ecs::system::SystemState`
  --> src/lib.rs:27:5
   |
27 | use bevy_ecs::system::SystemState;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `physics_core` (lib) generated 1 warning
error: could not compile `physics_core` (lib) due to 1 previous error; 1 warning emitted
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "/Users/kamran/PhysicsFX/physics_core" && "cargo" "build" "--lib" "--release" "--target" "wasm32-unknown-unknown" "--features" "wasm_support"

[Incubating] Problems report is available at: file:///Users/kamran/PhysicsFX/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':composeApp:buildRustWasm'.
> Process 'command 'wasm-pack'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 933ms
1 actionable task: 1 executed
